Fix information section collapse

--- a/style.css
+++ b/style.css
@@ -98,20 +98,26 @@ button {
 .information {
     display: flex;
     flex-direction: column;
-    padding: 10px 150px 120px;  
+    padding: 10px 200px 110px;  
+    flex: 1;
 }
 h2 {
     text-align: center;
     font-size: 36px;
     margin-bottom: 50px;
     font-weight: 700;
-
 }
-.info-box, .info-text {
+
+.info-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 50px;
-   
+}
+
+.info-box {
+    display: flex;
+    flex-direction: column;
 }
 
 .text {
@@ -120,14 +126,16 @@ h2 {
     color: rgb(110, 116, 124);
     font-size: 18px;
     margin-top: 5px; 
+    flex-shrink: 0;
     
 }
 
 .box {
-    height: 150px;
-    width: 150px;
+    height: 160px;
+    width: 160px;
     border: 4px solid #3882f6;
     border-radius: 15px;
+    flex-shrink: 0;
     
 }
 
@@ -189,3 +197,4 @@ h2 {
     background-color: #1F2937;
     
 }
+
